--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/server.js"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "body-parser": "^1.19.1",
+        "config": "^3.3.6",
         "dotenv": "^10.0.0",
         "express": "^4.17.2",
-        "mongoose": "^6.1.3"
+        "express-handlebars": "^6.0.2",
+        "fs": "^0.0.1-security",
+        "mongoose": "^6.1.3",
+        "path": "^0.12.7"
     },
     "devDependencies": {
         "@types/node": "^17.0.4",
@@ -16,6 +21,6 @@
         "sucrase": "^3.20.3"
     },
     "repository": "https://github.com/Pedrotb11/DesafioCompass1.git",
-    "author": "Pedro Torres <pedroadstb@gmail.com>",
+    "author": "Diego Fernandes - Rockestseat 99%",
     "license": "MIT"
 }
